--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "CLI time management tool.",
   "main": "index.js",
   "scripts": {
-    "test": "tape -r babel-register test/**/**.js"
+    "test": "tape -r babel-register test/**/**.js",
+    "build": "babel -s src -d lib",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,14 @@
   "bugs": {
     "url": "https://github.com/dustinrohde/hourglass/issues"
   },
-  "homepage": "https://github.com/dustinrohde/hourglass#readme"
+  "homepage": "https://github.com/dustinrohde/hourglass#readme",
+  "devDependencies": {
+    "babel-cli": "6.6.5",
+    "babel-preset-es2015": "6.6.0",
+    "babel-register": "6.6.5",
+    "tape": "4.5.1"
+  },
+  "dependencies": {
+    "lodash": "4.6.1"
+  }
 }
