--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "hourglass",
   "version": "0.0.1",
   "description": "CLI time management tool.",
-  "main": "index.js",
+  "bin": "bin/hourglass.js",
+  "main": "lib/main.js",
   "scripts": {
+    "lint": "standard src/*.js bin/*.js",
     "test": "tape -r babel-register test/**/**.js",
-    "build": "babel -s src -d lib",
+    "build": "babel src/ -d lib/ --source-maps",
     "watch": "npm run build -- --watch"
   },
   "repository": {
@@ -24,13 +26,26 @@
     "url": "https://github.com/dustinrohde/hourglass/issues"
   },
   "homepage": "https://github.com/dustinrohde/hourglass#readme",
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "add-module-exports"
+    ]
+  },
   "devDependencies": {
     "babel-cli": "6.6.5",
+    "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.6.0",
     "babel-register": "6.6.5",
+    "source-map-support": "0.4.0",
     "tape": "4.5.1"
   },
   "dependencies": {
-    "lodash": "4.6.1"
+    "commander": "2.9.0",
+    "lodash": "4.6.1",
+    "mz": "2.4.0",
+    "standard": "6.0.8"
   }
 }
