--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
   },
   "dependencies": {
     "commander": "2.9.0",
+    "lame": "1.2.3",
     "lodash": "4.6.1",
     "mz": "2.4.0",
-    "play": "0.5.0",
+    "speaker": "0.2.6",
     "standard": "6.0.8"
   }
 }
