--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "bin": "bin/hourglass.js",
   "main": "lib/main.js",
   "scripts": {
-    "lint": "standard src/*.js bin/*.js",
-    "test": "tape -r babel-register test/**/**.js",
-    "build": "babel src/ -d lib/ --source-maps",
-    "watch": "npm run build -- --watch"
+    "prepublish": "npm run clean && npm run build",
+    "clean": "rimraf lib/*",
+    "build": "babel src/ -d lib/",
+    "build-dev": "npm run build -- --source-maps",
+    "watch": "npm run build-dev -- --watch",
+    "lint": "standard src/*.js bin/*.js"
   },
   "repository": {
     "type": "git",
@@ -38,15 +40,14 @@
     "babel-cli": "6.6.5",
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.6.0",
-    "babel-register": "6.6.5",
-    "source-map-support": "0.4.0",
-    "tape": "4.5.1"
+    "source-map-support": "0.4.0"
   },
   "dependencies": {
     "commander": "2.9.0",
     "lame": "1.2.3",
     "lodash": "4.6.1",
     "mz": "2.4.0",
+    "source-map-support": "0.4.0",
     "speaker": "0.2.6",
     "standard": "6.0.8"
   }
