--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lame": "1.2.3",
     "lodash": "4.6.1",
     "mz": "2.4.0",
+    "prettyjson": "1.1.3",
     "source-map-support": "0.4.0",
     "speaker": "0.2.6",
     "standard": "6.0.8"
