--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lodash": "4.6.1",
     "mz": "2.4.0",
     "prettyjson": "1.1.3",
+    "progress": "1.1.8",
     "source-map-support": "0.4.0",
     "speaker": "0.2.6",
     "standard": "6.0.8"
