--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-cli": "6.6.5",
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.6.0",
+    "rimraf": "2.5.2",
     "source-map-support": "0.4.0"
   },
   "dependencies": {
