--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "babel src/ -d lib/",
     "build-dev": "npm run build -- --source-maps",
     "watch": "npm run build-dev -- --watch",
-    "lint": "standard src/*.js bin/*.js"
+    "lint": "standard src/*.js bin/*.js",
+    "test": "tape -r babel-register test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -40,8 +41,10 @@
     "babel-cli": "6.6.5",
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.6.0",
+    "babel-register": "6.6.5",
+    "blue-tape": "0.2.0",
     "rimraf": "2.5.2",
-    "source-map-support": "0.4.0"
+    "standard": "6.0.8"
   },
   "dependencies": {
     "commander": "2.9.0",
@@ -51,7 +54,6 @@
     "prettyjson": "1.1.3",
     "progress": "1.1.8",
     "source-map-support": "0.4.0",
-    "speaker": "0.2.6",
-    "standard": "6.0.8"
+    "speaker": "0.2.6"
   }
 }
