--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-dev": "npm run build -- --source-maps",
     "watch": "npm run build-dev -- --watch",
     "lint": "standard src/*.js bin/*.js",
-    "test": "tape -r babel-register test/**/*.js"
+    "test": "blue-tape -r babel-register test/**/*.js | faucet"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
   "homepage": "https://github.com/dustinrohde/hourglass#readme",
   "babel": {
     "presets": [
-      "es2015"
+      "es2015-loose"
     ],
     "plugins": [
       "add-module-exports"
@@ -41,10 +41,13 @@
     "babel-cli": "6.6.5",
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.6.0",
+    "babel-preset-es2015-loose": "7.0.0",
     "babel-register": "6.6.5",
     "blue-tape": "0.2.0",
+    "faucet": "0.0.1",
     "rimraf": "2.5.2",
-    "standard": "6.0.8"
+    "standard": "6.0.8",
+    "test-console": "1.0.0"
   },
   "dependencies": {
     "commander": "2.9.0",
